# bring-me-the-metrics

./: .env.example  .gitignore  README.md  check_bronze_spotify.py  check_s3.py  check_silver.py  config.py  interview_study_guide.md  mlflow.db  pyproject.toml
.github/workflows/: ci.yml  pipeline.yml
dbt/: profiles.yml
dbt/metal_intelligence/: dbt_project.yml
dbt/metal_intelligence/models/marts/: mart_album_legacy.sql  mart_artist_features.sql  mart_subgenre_health.sql
dbt/metal_intelligence/models/staging/: sources.yml  stg_albums.sql  stg_artists.sql
ingestion/common/: s3.py
ingestion/lastfm/: client.py  ingest.py
ingestion/musicbrainz/: client.py  ingest.py
ingestion/spotify/: backfill_popularity.py  client.py  ingest.py
ml/: data.py  predict.py  train.py
mlartifacts/1/models/m-5ca47062ac864469b5b0fe7b919c0da2/artifacts/: MLmodel  model.skops  requirements.txt
mlartifacts/1/models/m-810e30f40a7a419fbd0c87ccd0c6f5b2/artifacts/: MLmodel  conda.yaml  model.skops
scripts/: export_marts.py  setup_athena.py
silver/: pipeline.py  writer.py
silver/cleaning/: bronze_reader.py  cleaner.py
silver/entity_resolution/: resolver.py
visualizations/: charts.py
